tools/analysis/test/cluster/ingress-ip-not-found/cluster-dump/ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj/logs.txt
==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
2022-05-25T13:19:23.336792Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-05-25T13:19:23.336855Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=15090,15021,8080,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-05-25T13:19:23.337673Z	info	Writing following contents to rules file: /tmp/iptables-rules-1653484763336960697.txt2751679512
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s 127.0.0.6/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-05-25T13:19:23.337735Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1653484763336960697.txt2751679512
2022-05-25T13:19:23.362153Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1653484763362059527.txt3471280926

2022-05-25T13:19:23.362190Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1653484763362059527.txt3471280926
2022-05-25T13:19:23.374100Z	info	Running command: iptables-save 
2022-05-25T13:19:23.392091Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Wed May 25 13:19:23 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Wed May 25 13:19:23 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
==== START logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
2022/05/25 13:25:17 format not specified. Using text/html
2022/05/25 13:25:17 unexpected error reading return code: strconv.Atoi: parsing "": invalid syntax. Using 404
2022/05/25 13:25:17 serving custom error response for code 404 and format text/html from file /www/404.html
==== END logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
2022-05-25T13:19:42.044791Z	info	FLAG: --concurrency="2"
2022-05-25T13:19:42.044829Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-05-25T13:19:42.044839Z	info	FLAG: --help="false"
2022-05-25T13:19:42.044846Z	info	FLAG: --log_as_json="false"
2022-05-25T13:19:42.044853Z	info	FLAG: --log_caller=""
2022-05-25T13:19:42.044861Z	info	FLAG: --log_output_level="default:info"
2022-05-25T13:19:42.044887Z	info	FLAG: --log_rotate=""
2022-05-25T13:19:42.044894Z	info	FLAG: --log_rotate_max_age="30"
2022-05-25T13:19:42.044901Z	info	FLAG: --log_rotate_max_backups="1000"
2022-05-25T13:19:42.044908Z	info	FLAG: --log_rotate_max_size="104857600"
2022-05-25T13:19:42.044916Z	info	FLAG: --log_stacktrace_level="default:none"
2022-05-25T13:19:42.044931Z	info	FLAG: --log_target="[stdout]"
2022-05-25T13:19:42.044941Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-05-25T13:19:42.044947Z	info	FLAG: --outlierLogPath=""
2022-05-25T13:19:42.044955Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-05-25T13:19:42.044961Z	info	FLAG: --proxyLogLevel="warning"
2022-05-25T13:19:42.044968Z	info	FLAG: --serviceCluster="istio-proxy"
2022-05-25T13:19:42.044975Z	info	FLAG: --stsPort="0"
2022-05-25T13:19:42.044983Z	info	FLAG: --templateFile=""
2022-05-25T13:19:42.044991Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-05-25T13:19:42.045012Z	info	FLAG: --vklog="0"
2022-05-25T13:19:42.045022Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-05-25T13:19:42.045551Z	info	Proxy role	ips=[10.244.0.144 fe80::a886:44ff:fe4c:89c] type=sidecar id=ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-05-25T13:19:42.045645Z	info	Apply proxy config from env {}

2022-05-25T13:19:42.052524Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-05-25T13:19:42.052566Z	info	JWT policy is third-party-jwt
2022-05-25T13:19:42.077309Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-05-25T13:19:42.077471Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-05-25T13:19:42.077617Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-05-25T13:19:42.077716Z	info	Opening status port 15020
2022-05-25T13:19:42.105424Z	info	ads	All caches have been synced up in 65.799681ms, marking server ready
2022-05-25T13:19:42.106339Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-05-25T13:19:42.106383Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-05-25T13:19:42.109010Z	info	sds	Starting SDS grpc server
2022-05-25T13:19:42.109168Z	info	starting Http service at 127.0.0.1:15004
2022-05-25T13:19:42.109275Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-05-25T13:19:42.112174Z	info	Starting proxy agent
2022-05-25T13:19:42.112236Z	info	Epoch 0 starting
2022-05-25T13:19:42.112268Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-05-25T13:19:42.645255Z	info	cache	generated new workload certificate	latency=539.429077ms ttl=23h59m59.354774831s
2022-05-25T13:19:42.645599Z	info	cache	Root cert has changed, start rotating root cert
2022-05-25T13:19:42.646589Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-05-25T13:19:42.646784Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.353224092s
2022-05-25T13:19:43.034926Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-05-25T13:19:43.405677Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj.ingress-nginx-1
2022-05-25T13:19:43.405846Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.594163986s
2022-05-25T13:19:43.406421Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-05-25T13:19:43.445314Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj.ingress-nginx-2
2022-05-25T13:19:43.445458Z	info	cache	returned workload certificate from cache	ttl=23h59m58.554551381s
2022-05-25T13:19:43.445669Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj.ingress-nginx resources:1 size:9.2kB resource:default
2022-05-25T13:19:44.853951Z	info	Readiness succeeded in 2.813086398s
2022-05-25T13:19:44.854434Z	info	Envoy proxy is ready
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8xhplj ====
